# confluence-sync

./: .gitignore  README.md  pyproject.toml
confluence_sync/: __main__.py  cli.py  confluence.py  context.py  events.py  fmt.py  logger.py  observer.py  sync.py  tree.py
confluence_sync/parser/: storage.py
confluence_sync/utils/: bsoup4.py  text.py
tests/: .env.confluence.example  .env.example  .env.test.example  README.md  docker-compose.yaml
tests/integration/: case.py  config.py  confluencex.py  conftest.py  fixtures.py  template.py  test_cli.py
tests/integration/cases/10_copy_page_hierarchy_with_embedded_drawio_in_hierarchy_upper_level_source/: description.txt
tests/integration/cases/11_copy_page_with_single_embedded_drawio_single_out_hierarchy_source/: description.txt
tests/integration/cases/12_copy_page_drawio_ext_src_rename/: description.txt
tests/integration/cases/13_copy_hierarchy_multi_sibling_drawio_single_ext_src/: description.txt
tests/integration/cases/14_copy_hierarchy_multi_sibling_drawio_single_ext_src_rename/: description.txt
tests/integration/cases/16_copy_page_with_sync_out_reference_to_out_hierarchy_top_page/: description.txt
tests/integration/cases/17_copy_page_sync_ext_ref_nth_child_page/: description.txt
tests/integration/cases/18_copy_page_sync_ext_ref_nth_child_page_preexisting_dst_ancestor/: description.txt
tests/integration/cases/18_copy_page_with_sync_out_reference_to_out_hierarchy_nth_child_page_and_preexisting_page/: config.yaml
tests/integration/utils/: xhtml.py
(+43 files in other folders)
